--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ header .box-signup .Sign-up:hover{
     background-size: cover;
     display: flex;
     align-items: center;
+    position: relative;
 }
 .home .text-home h1{
     font-size: 3rem;
@@ -146,6 +147,8 @@ header .box-signup .Sign-up:hover{
     font-size: 18px;
     color: #fff;
 }
+
+/* box-container*/
 .heading{
     text-align: center;
     margin-top: 50px;
@@ -158,8 +161,6 @@ header .box-signup .Sign-up:hover{
 .heading h1{
     font-size: 2rem;
 }
-
-/* box-container*/
 .box-container{
     width: 90%;
     margin: auto;
@@ -167,12 +168,13 @@ header .box-signup .Sign-up:hover{
     display: grid;
     grid-template-columns: repeat(auto-fit , minmax(250px , auto));
     gap: 1rem;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     text-align: center;
 }
 .box-container .box{
-    margin-right: 10px;
+    margin: 10px 10px;
 }
 .box-container .box i{
     font-size: 32px;
@@ -190,7 +192,10 @@ header .box-signup .Sign-up:hover{
 .box-container .box h3{
     padding: 20px 0;
 }
-
+.box-container .box p{
+   line-height: 25px;
+   font-size: 16px;
+}
 /* images-container*/
 .container-images{
     width: 90%;
@@ -199,12 +204,11 @@ header .box-signup .Sign-up:hover{
     display: grid;
     justify-content: space-between;
     align-items: center;
-    grid-template-columns: repeat(auto-fit , minmax(300px , auto));
+    grid-template-columns: repeat(auto-fit , minmax(30% , auto));
     gap:1rem;
 }
 .container-images .box .img{
     width: 100%;
-    height: 200px;
     padding-bottom: 30px;
 }
 .container-images .box .img img{
@@ -264,6 +268,7 @@ header .box-signup .Sign-up:hover{
 }
 .about-text p{
     padding: 20px 0;
+    line-height: 28px;
 }
 .about-text a{
     padding: 8px 16px;
@@ -275,7 +280,7 @@ header .box-signup .Sign-up:hover{
 
 /*make a media query*/
 
-@media (max-width:855px){
+@media (max-width:910px){
     header .logo img{
         width: 40px;
     }
@@ -297,16 +302,13 @@ header .box-signup .Sign-up:hover{
         top: 65px;
         background-color: white;
         width: 100%;
-        padding: 50px 0;
+        padding: 45px 0;
         display: flex;
         flex-direction: column;
         row-gap: 60px;
     }
     header .navbar.isActive{
         left: 0;
-    }
-    header .navbar li{
-        position: relative;
     }
     header .navbar li a{
         padding: 1rem ;
@@ -317,55 +319,104 @@ header .box-signup .Sign-up:hover{
     }
     header .navbar li a:hover{
         border: none;
-        background-color: var(--main-color);
+        background-color:var(--main-color);
         border-radius: 6px;
-        color: white;
+        color: white; 
     }
     header .navbar li a::after{
         display: none;
     }
-
-    .home{
-        min-height: 100vh;
-        background: url("/img/Background-home.png");
-        background-position: center; 
-        background-repeat: no-repeat;
-        background-size: cover;
-        position: relative;
-    }
     .home .text-home h1{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
     .home .text-home p{
-        font-size: 18px;
+        font-size: 16px;
     }
     .home .box-app img{
         width: 100px;
     }
     .form-container form{
-        width: 80%;
-        bottom:.5rem;
-        left:50%;
+        bottom: .5rem;
+        left: 50%;
         transform: translateX(-50%);
-        padding: 10px;
+        width: 80%;
+        padding: 0;
     }
     .form-container form .input-box{
-        display: flex;
+        margin:15px;
+    }
+    .form-container form .input-box input{
+        padding: 10px 20px;
+    }
+    .heading{
+        text-align: center;
+        margin-top: 50px;
+        line-height: 30px;
+    }
+    .heading p{
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+    .heading h1{
+        font-size: 1.5rem;
+    }
+    .box-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+    }
+    .box-container .box{
+        width: 100%;
         flex-direction: column;
-        margin: 15px;
-        width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        margin: 10px 10px;
+        text-align: center;
+    }
+    .box-container .box p{
+       line-height: 25px;
+       font-size: 16px;
+       max-width: 400px;
+    }
+    .container-images{
+        grid-template-columns: repeat(auto-fit , minmax(40% , auto));
+        justify-content: center;
+    }
+    .container-about{
+        width: 90%;
+        grid-template-columns: repeat(auto-fit , minmax(100% , auto));
     }
 }
-@media (max-width:601px){
+@media (max-width:620px){
+    header .logo img{
+        width: 35px;
+    }
+    header .box-signup{
+        column-gap: 10px;
+    }
+    header .box-signup button{
+        padding: 8px ;
+        font-size: 14px;
+    }
+    header .box-signup .Sign-in{
+        background-color: royalblue;
+        color: white;
+    }
     .home .text-home{
         position: absolute;
         top: 20%;
     }
     .home .text-home h1{
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
     .home .text-home p{
-        font-size: 16px;
+        font-size: 14px;
+        padding: 18px 0;
+        line-height: 25px;
+    }
+    .home .box-app img{
+        width: 80px;
     }
     .form-container form{
         width:80%;
@@ -377,14 +428,20 @@ header .box-signup .Sign-up:hover{
     }
     .form-container form .input-box{
         margin: auto;
-        margin-top: 25px;
+        margin-top: 20px;
         width: 90%;
     }
     .form-container form .input-box input{
-        padding: 8px 16px;
+        padding: 8px;
         margin-top: 5px;
     }
     .form-container form button{
-        margin-top: 20px;
+        margin: 10px;
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+    .container-images{
+        grid-template-columns: repeat(auto-fit , minmax(100% , auto));
+        justify-content: center;
     }
 }
